@@ -4,6 +4,7 @@
 -Add: Create action menus for the file manager
 -Change: Create temp files in the kde-user temp dir
 -Change: Remove partially converted files on abort or fail
+-Change: Remove old KDE4 action menus created by soundKonverter 0.3
 -Fix: Remove audio/mpeg mime type from mp1 and mp2 codecs in the ffmpeg and mplayer plugins because it would conflict with mp3
 -Fix: soundKonverter would get stuck when trying to add replaygain (add argument for mp3gain/aacgain to lower gain to avoid clipping)
 -Fix: soundkonverter would crash when trying to rip a cd or add files if the options widget can't be initialized correctly
